[package]
name = "realworld-axum-sqlx"
version = "0.1.0"
edition = "2021"
publish = false
authors = [
    "Austin Bonander <austin@launchbadge.com>",
    "David Pedersen <david.pdrsn@gmail.com>",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core dependencies: runtime, HTTP framework and database client.
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal"] }
axum = { version = "0.7.7", features = ["tower-log"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }

# The `clap` beta gives us a much nicer way to define configuration parameters for our application.
clap = { version = "4.5.21", features = ["derive", "env"] }

serde = { version = "1.0.215", features = ["derive"] }

# State of the art password hashing.
argon2 = "0.5.3"

# axum builds on the types in Tower
tower = "0.5.1"
tower-http = { version = "0.6.1", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }

jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.8"

time = "0.3.30"

uuid = { version = "1.11.0", features = ["serde"] }

# Utility Crates
anyhow = "1.0.93"
async-trait = "0.1.83"
dotenv = "0.15.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.14"
rand = "0.8.4"
thiserror = "2.0.3"
